[package]
name = "ecdaa"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { git="https://github.com/akakou/bls12_381/", branch="main", features=["serde"] }
rand = "0.8.3"
ff = "0.9.0"
group = "0.9.0"
sha2 = "0.9.3"
slice_as_array = { git = "https://github.com/akakou/slice_as_array", branch="master" , default-features=false }
# pairing = "0.19.0"
byteorder = "1.4.3"
serde = { version="1.0", features = ["derive"]}
serde_json = "^1.0.41"

#[features]
#default = ["alloc"]