[package]
name = "ecdaa"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcl_rust = { git = "https://github.com/akakou-fork/mcl-rust", branch = "akakou" }
rand = "0.8.5"
